# gnome-disk-utility

./: .dir-locals.el  .gitignore  .gitlab-ci.yml  AUTHORS  COPYING  Cargo.toml  HACKING  INSTALL  MAINTAINERS  Makefile.am  NEWS  README  README.md  TODO  autogen.sh  configure.ac  gnome-disk-utility.doap  gobject-linter.toml  meson.build  meson_options.txt  meson_post_install.py  release
data/: Makefile.am  gdu-mimetypes.xml  gdu-notification-daemon.desktop.in.in.in  gnome-disk-image-mounter.desktop.in  gnome-disk-image-writer.desktop.in  gnome-disk-utility.desktop.in  gnome-disks.appdata.xml.in  gnome-disks.desktop.in  meson.build  org.gnome.DiskUtility.appdata.xml.in  org.gnome.DiskUtility.desktop.in  org.gnome.DiskUtility.metainfo.xml.in  org.gnome.DiskUtility.service.in  org.gnome.Disks.gschema.xml  org.gnome.Disks.gschema.xml.in.in  org.gnome.settings-daemon.plugins.gdu-sd.gschema.xml  org.gnome.settings-daemon.plugins.gdu-sd.gschema.xml.in.in  palimpsest.desktop.in
data/icons/: Makefile.am  meson.build
data/ui/: Makefile.am  about-dialog.ui  app-menu.ui  benchmark-dialog.ui  change-passphrase-dialog.ui  create-disk-image-dialog.ui  create-partition-dialog.ui  create-raid-array-dialog.ui  disk-settings-dialog.ui  disks.ui  edit-crypttab-dialog.ui  edit-dos-partition-dialog.ui  edit-filesystem-dialog.ui  edit-fstab-dialog.ui  edit-gpt-partition-dialog.ui  edit-partition-dialog.ui  erase-multiple-disks-dialog.ui  filesystem-create.ui  format-disk-dialog.ui  format-volume-dialog.ui  iscsi-connection-dialog.ui  md-raid-disks-dialog.ui  palimpsest.ui  restore-disk-image-dialog.ui  select-disk-dialog.ui  smart-dialog.ui  unlock-device-dialog.ui
doc/: TODO  (+4 more)
doc/man/: Makefile.am  gnome-disk-image-mounter.xml  gnome-disks.xml  meson.build
src/: Makefile.am  gdu-activatable-drive.c  gdu-activatable-drive.h  gdu-device-tree.c  gdu-device-tree.h  gdu-device.c  gdu-device.h  gdu-disk-widget.c  gdu-disk-widget.h  gdu-drive.c  gdu-drive.h  gdu-error.c  gdu-error.h  gdu-known-filesystem.c  gdu-known-filesystem.h  gdu-main.c  gdu-main.h  gdu-menus.c  gdu-menus.h  gdu-page-drive.c  gdu-page-drive.h  gdu-page-encrypted.c  gdu-page-encrypted.h  gdu-page-erase.c  gdu-page-erase.h  gdu-page-job.c  gdu-page-job.h  gdu-page-partition-create.c  gdu-page-partition-create.h  gdu-page-partition-modify.c  gdu-page-partition-modify.h  gdu-page-partition-table.c  gdu-page-partition-table.h  gdu-page-partitioning.c  gdu-page-partitioning.h  gdu-page-summary.c  gdu-page-summary.h  gdu-page-volume-unallocated.c  gdu-page-volume-unallocated.h  gdu-page-volume-unrecognized.c  (+48 more)
src/disk-image-mounter/: Cargo.toml  Makefile.am  application.rs  config.rs.in  error.rs  main.c  main.rs  meson.build  unmount.rs  window.rs  window.ui
src/disks/: Cargo.toml  Makefile.am  estimator.rs  gdu-application.c  gdu-application.h  gdu-ata-smart-dialog.c  gdu-ata-smart-dialog.h  gdu-benchmark-dialog.c  gdu-benchmark-dialog.h  gdu-block-row.c  gdu-block-row.h  gdu-block.c  gdu-block.h  gdu-change-passphrase-dialog.c  gdu-change-passphrase-dialog.h  gdu-create-confirm-page.c  gdu-create-confirm-page.h  gdu-create-disk-image-dialog.c  gdu-create-disk-image-dialog.h  gdu-create-filesystem-page.c  gdu-create-filesystem-page.h  gdu-create-other-page.c  gdu-create-other-page.h  gdu-create-partition-page.c  gdu-create-partition-page.h  gdu-create-password-page.c  gdu-create-password-page.h  gdu-disk-settings-dialog.c  gdu-disk-settings-dialog.h  gdu-drive-header.c  gdu-drive-header.h  gdu-drive-row.c  gdu-drive-row.h  gdu-drive-view.c  gdu-drive-view.h  gdu-drive.c  gdu-drive.h  gdu-edit-filesystem-dialog.c  gdu-edit-filesystem-dialog.h  gdu-edit-partition-dialog.c  (+117 more)
src/format-tool/: Makefile.am  TODO  format-window-operation.c  format-window-operation.h  format-window.c  format-window.h  gdu-format-dialog.c  gdu-format-dialog.h  gdu-format-progress-dialog.c  gdu-format-tool.c  gdu-utils.c  gdu-utils.h
src/gdu/: Makefile.am  gdu-activatable-drive.c  gdu-activatable-drive.h  gdu-adapter.c  gdu-adapter.h  gdu-ata-smart-attribute.c  gdu-ata-smart-attribute.h  gdu-ata-smart-historical-data.c  gdu-ata-smart-historical-data.h  gdu-callbacks.h  gdu-controller.c  gdu-controller.h  gdu-device.c  gdu-device.h  gdu-drive.c  gdu-drive.h  gdu-error.c  gdu-error.h  gdu-expander.c  gdu-hba.c  gdu-hba.h  gdu-hub.c  gdu-hub.h  gdu-known-filesystem.c  gdu-known-filesystem.h  gdu-linux-lvm2-volume-group.c  gdu-linux-lvm2-volume-group.h  gdu-linux-lvm2-volume-hole.c  gdu-linux-lvm2-volume.c  gdu-linux-lvm2-volume.h  gdu-linux-md-drive.c  gdu-linux-md-drive.h  gdu-machine.c  gdu-marshal.list  gdu-pool.c  gdu-pool.h  gdu-port.c  gdu-port.h  gdu-presentable.c  gdu-presentable.h  (+19 more)
src/gdu-gtk/: Makefile.am  gdu-add-component-linux-md-dialog.c  gdu-add-component-linux-md-dialog.h  gdu-add-pv-linux-lvm2-dialog.c  gdu-ata-smart-attribute-dialog.c  gdu-ata-smart-attribute-dialog.h  gdu-ata-smart-dialog.c  gdu-ata-smart-dialog.h  gdu-button-element.c  gdu-button-table.c  gdu-button-table.h  gdu-confirmation-dialog.c  gdu-confirmation-dialog.h  gdu-connect-to-server-dialog.c  gdu-connect-to-server-dialog.h  gdu-create-linux-md-dialog.c  gdu-create-linux-md-dialog.h  gdu-create-partition-dialog.c  gdu-curve.c  gdu-curve.h  gdu-details-element.c  gdu-details-element.h  gdu-details-table.c  gdu-details-table.h  gdu-dialog.c  gdu-dialog.h  gdu-disk-selection-widget.c  gdu-disk-selection-widget.h  gdu-drive-benchmark-dialog.c  gdu-edit-filesystem-dialog.c  gdu-edit-filesystem-dialog.h  gdu-edit-linux-lvm2-dialog.c  gdu-edit-linux-lvm2-dialog.h  gdu-edit-linux-md-dialog.c  gdu-edit-linux-md-dialog.h  gdu-edit-name-dialog.c  gdu-edit-partition-dialog.c  gdu-error-dialog.c  gdu-error-dialog.h  gdu-format-dialog.c  (+21 more)
src/gnome-disk-image-mounter/: main.c
src/libgdu/: Cargo.toml  Makefile.am  enums.rs  gduutils.c  gduutils.h  gduutils.rs  gettext.rs  gtk3-to-4.c  gtk3-to-4.h  lib.rs  libgdu.h  libgduenums.h  libgduenumtypes.c.template  libgduenumtypes.h.template  libgdutypes.h  meson.build
src/nautilus-extension/: Makefile.am  nautilus-gdu.c  nautilus-gdu.h  (+1 more)
(+348 files in other folders)
