[workspace]
resolver = "2"
members = [
    "src/disk-image-mounter",
]

[profile.release]
lto = true
codegen-units = 1

[workspace.dependencies]
log = "0.4"
env_logger = "0.11.2"
udisks = { package = "udisks2", git = "https://github.com/FineFindus/udisks-rs.git", rev = "001e0c02830a4a229adb99207250b275c79261a2"}
gtk = { version = "0.8", package = "gtk4", features = [
    "v4_12",
    "xml_validation",
]}
gettext-rs = { version = "0.7", features = ["gettext-system"] }
