option('logind', type: 'combo', choices: ['libsystemd', 'libelogind', 'none'], value: 'libsystemd', description: 'build with logind')
option('gsd_plugin', type: 'boolean', value: true, description: 'build gnome-settings-daemon plug-in')
option('man', type: 'boolean', value: true, description: 'generate man pages')
option('profile', type: 'combo', choices: ['release', 'development'], value: 'release', description: 'rust build profile')
